Clean up code (#17)